[workspace]
resolver = "2"

members = [
    "tools",
    "tools/gte/core",
    "tools/gte/core/gte-acp",
    "tools/gte/core/gte-w65c02s",
    "tools/gte/libretro",
    "sdk-template/gametank",
]

exclude = [
    "sdk-template/asset-macros",
    "examples",
    "examples/*",
    "examples/*/*",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
