[package]
name = "rom"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
default = ["audio-wavetable-7ch-linear"]
audio-wavetable-8ch = ["gametank/audio-wavetable-8ch"]
audio-wavetable-7ch-linear = ["gametank/audio-wavetable-7ch-linear"]

[profile.release]
strip = "none"
opt-level = "z"  # Optimize for size.
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
volatile-register = "0.2.2"
bit_field = "0.10.3"
bitflags = "2.9.3"
gametank-asset-macros = { path = "asset-macros" }
gametank = { path = "gametank" }