[package]
name = "rom"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio"]

# Select one of the following audio firmware options:
audio = ["audio-wavetable-8v"]
# audio = ["audio-fm-4op"]

audio-wavetable-8v = ["gametank/audio-wavetable-8v"]
audio-fm-4op = ["gametank/audio-fm-4op"]

[profile.dev]
panic = "abort"

[profile.release]
strip = "none"
opt-level = "z"  # Optimize for size.
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
gametank = { path = "sdk" }
gametank-asset-macros = { path = "asset-macros" }