[package]
name = "gtld"
version = "0.1.6"
edition = "2024"

description = "GameTank Loader! For loading gametank roms onto 2M Flash cartridges using the Gametank Cartridge Programmer v4"
license = "MIT"

[dependencies]

serialport="4.7.2"
dialoguer = "0.11.0"
structopt = "0.3.26"
anyhow = "1.0.99"
crc32fast = "1.5.0"
tempfile = "3.20.0"
